testsuite/tests/backtrace/print_location.reference
Fatal error: exception Stdlib.Exit
Raised at Print_location.f in file "print_location.ml", line 8, characters 11-23
Called from Print_location in file "print_location.ml", line 12, characters 2-6
